--- a/css-basics/pseudo-park/css-basics_pseudo-park/css/styles.css
+++ b/css-basics/pseudo-park/css-basics_pseudo-park/css/styles.css
@@ -22,6 +22,7 @@
 
 .animal {
   padding: 16px;
+  font-size: 32px;
 
   /*
     The animals are very small.
@@ -30,6 +31,25 @@
   */
 }
 
+.animal-crocodile:hover {
+  background-color: lightblue;
+}
+
+.animal-giraffe {
+  text-align: center;
+}
+
+.animal-giraffe:hover {
+  background-color: lightgreen;
+}
+
+.animal-dino {
+  text-align: right;
+}
+
+.animal-dino:hover {
+  background-color: lightsalmon;
+}
 /*
   The giraffe is afraid of the crocodile and the dino.
    - center the giraffe in the park
