--- a/css-basics/playground-button-styles/css-basics_button-styles/css/styles.css
+++ b/css-basics/playground-button-styles/css-basics_button-styles/css/styles.css
@@ -30,18 +30,30 @@ button {
 /* Add your CSS styles below this line. Feel free to replace the comments with your code. Make sure not to put your code into the comments, because then nothing will happen. */
 
 .button1 {
-  /*Style me! Change my border, set a border radius or what you want to try out. :) */
+  border-radius: 15px;
+
+  /* Style me! Change my border, set a border radius or what you want to try out. :) */
 }
 
 .button2 {
+  background-color: rgb(123, 53, 131);
+  color: white;
   /*Style me! Change my color, or my background-color. Or both! You can test out different color modes here - like HEX, RGB, ... */
 }
 
 .button3 {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 60px;
   /*Style me! You can test out changing the font, or font size, ...*/
 }
 
 .button4 {
+  box-shadow: 10px 15px 5px;
+  color: rgb(123, 17, 123);
+  text-shadow: 5px, 5px, 5px;
+  font-family: fantasy;
+  border-color: rgb(59, 13, 127);
+  background-color: crimson;
   /*Style me! Can you add a shadow to this button? Maybe play around with the shadow properties, as well? You can even color the shadow, make it bigger or smaller, ... */
 }
 
