solved challenge playground

--- a/css-basics/css-responsive/playground/css-responsive_playground/css/styles.css
+++ b/css-basics/css-responsive/playground/css-responsive_playground/css/styles.css
@@ -62,15 +62,27 @@ h1 {
 .box--one {
   background-color: lightblue;
 
-  width: 100px;
+  width: 50%;
   height: 100px;
 }
 
 .box--two {
   background-color: lightgreen;
 
-  width: 100px;
+  width: 200px;
   height: 100px;
+}
+
+@media (min-width: 599px) {
+  .box--two {
+    width: 200px;
+  }
+}
+
+@media (min-width: 1199px) {
+  .box--two {
+    width: 400px;
+  }
 }
 
 .box--three {
@@ -80,11 +92,23 @@ h1 {
   height: 250px;
 }
 
+@media (orientation: landscape) {
+  .box--three {
+    aspect-ratio: 1/1;
+  }
+}
+
 .box--four {
   background-color: lightgray;
 
   width: 100px;
   height: 100px;
+}
+
+@media (prefers-color-scheme: dark) {
+  .box--four {
+    background-color: var(--color-granite);
+  }
 }
 
 .box--five {
@@ -93,4 +117,16 @@ h1 {
 
 .box--five img {
   width: 100%;
+}
+
+@media (min-width: 1199px) {
+  .box--five {
+    width: 400px;
+  }
+}
+
+@media (min-width: 599px) {
+  .box--five {
+    width: 200px;
+  }
 }
